--- a/EDA/model.ipynb
+++ b/EDA/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "7684  2020-10-12 22:30:12+05:30   350.0  2020     10    42    12  2020-10-12"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "       [0.0314436 ]])"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "7684    0.004676  "
       ]
      },
-     "execution_count": 372,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "7684    0.004676"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,13 +621,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# tain and test dataset\n",
     "\n",
     "train, test = sales[: int(len(sales)*0.8)].values, sales[int(len(sales)*0.8):].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(train)"
    ]
   },
   {
@@ -641,6 +661,97 @@
     "X_test, y_test = test[:, 1:], test[:, 0:1]\n",
     "X_test = X_test.reshape(X_test.shape[0], 1, X_test.shape[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1],\n",
+       "       [2, 3],\n",
+       "       [4, 5]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(6)\n",
+    "\n",
+    "a.reshape((3,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.13676213, 0.04441847, 0.07843366, ..., 0.18819404,\n",
+       "         0.26767972, 0.        ]],\n",
+       "\n",
+       "       [[0.03974284, 0.13676213, 0.04441847, ..., 0.03857393,\n",
+       "         0.18819404, 0.26767972]],\n",
+       "\n",
+       "       [[0.08533022, 0.03974284, 0.13676213, ..., 0.00467563,\n",
+       "         0.03857393, 0.18819404]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[0.03389831, 0.05727645, 0.03974284, ..., 0.13898305,\n",
+       "         0.01975453, 0.38305085]],\n",
+       "\n",
+       "       [[0.12390415, 0.03389831, 0.05727645, ..., 0.03974284,\n",
+       "         0.13898305, 0.01975453]],\n",
+       "\n",
+       "       [[0.03974284, 0.12390415, 0.03389831, ..., 0.12741087,\n",
+       "         0.03974284, 0.13898305]]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train = train[:, 1:]\n",
+    "X_train.reshape(X_train.shape[0], 1, X_train.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -668,9 +779,6 @@
    "source": [
     "model = Sequential()\n",
     "model.add(LSTM(64, activation = 'relu', input_shape = ( X_train.shape[1], X_train.shape[2]), return_sequences=True))\n",
-    "#model.add(LSTM(128, activation = 'relu', return_sequences=True))\n",
-    "#model.add(LSTM(64, activation = 'relu', return_sequences=True))\n",
-    "#model.add(LSTM(32, activation = 'relu', return_sequences=True))\n",
     "model.add(LSTM(16, activation = 'relu', return_sequences = False))\n",
     "model.add(Dropout(0.2))\n",
     "model.add(Dense(1))#y_train.shape[1]"
